<resources>
    <string name="app_name">Stumeet</string>
    <string name="navigation_home">홈</string>
    <string name="navigation_study">내 스터디 그룹</string>
    <string name="navigation_calendar">캘린더</string>
    <string name="navigation_my">마이</string>
    <string name="enum_review_sort_latest">최근순</string>
    <string name="enum_review_sort_highest_rating">별점 높은순</string>
    <string name="enum_review_sort_lowest_rating">별점 낮은순</string>
    <string name="enum_region_seoul">서울</string>
    <string name="enum_region_inchen_gyeonggi">인천/경기</string>
    <string name="enum_region_jeonbuk">전북</string>
    <string name="enum_region_jeonnam">전남</string>
    <string name="enum_region_gangwon">강원</string>
    <string name="enum_region_gyeongbuk">경북</string>
    <string name="enum_region_gyeongnam">경남</string>
    <string name="enum_region_chugbuk">충북</string>
    <string name="enum_region_chungnam">충남</string>
    <string name="enum_region_jeju">제주</string>
    <string name="enum_region_overseas">해외</string>
    <string name="enum_reason_spam">상업적 광고 및 스팸</string>
    <string name="enum_reason_harmful">음란물 및 유해성 활동</string>
    <string name="enum_reason_slander">욕설 및 비방</string>
    <string name="enum_reason_fraud">사기 또는 사칭</string>
    <string name="enum_reason_flooding">도배</string>
    <string name="enum_reason_others">기타</string>
    <string name="enum_report_study">스터디</string>
    <string name="enum_report_activity">활동</string>
    <string name="enum_review_tag_diligence">귀차니즘</string>
    <string name="enum_review_tag_task_commitment">과제 성실도</string>
    <string name="enum_review_tag_consistent_attendance">프로개근러</string>
    <string name="enum_review_tag_best_leader">최고의 리더</string>
    <string name="enum_review_tag_best_supporter">최고의 서포터</string>
    <string name="enum_review_tag_fast_response">빠른 응답</string>
    <string name="enum_review_tag_slow_response">느린 응답</string>
    <string name="enum_review_tag_j">확신의 J</string>
    <string name="enum_review_tag_p">확신의 P</string>
    <string name="enum_review_tag_max_responsibility">책임감 MAX</string>
    <string name="enum_review_tag_mood_maker">분위기 메이커</string>
    <string name="enum_review_tag_effot_top">노력 1등</string>
    <string name="enum_review_tag_needs_improvement">분발이 필요해요</string>
    <string name="enum_review_tag_neat_notes">깔끔한 필기</string>
    <string name="enum_review_tag_pinpoint_teacher">쪽집게 강사</string>
    <string name="enum_study_sort_active">활성</string>
    <string name="enum_study_sort_finished">완료</string>
    <string name="enum_study_activity_type_meet">모임</string>
    <string name="enum_study_activity_type_assignment">과제</string>
    <string name="enum_study_activity_type_default">자유</string>
    <string name="enum_level_seeds">씨앗</string>
    <string name="enum_level_sprout">새싹</string>
    <string name="enum_level_leaf">잎</string>
    <string name="enum_level_flower">꽃</string>
    <string name="enum_level_tree">나무</string>
    <string name="enum_level_fruit">열매</string>
    <string name="component_popup_no">아니요</string>
    <string name="component_popup_yes">예</string>
    <string name="test_popup_question"><![CDATA[<b> Are you sure? </b> popup test]]></string>
    <string name="component_snackbar_caution">!</string>
    <string name="component_snackbar_test">테스트테스트테스트테스트테스트테스트테스트테스트테스트테스트</string>
    <string name="component_snackbar_go_to_setting">설정 이동</string>
    <string name="component_snackbar_test_tag">StumeetSnackBar</string>
    <string name="tv_activity_remain_time_minutes">%1$d분 남음</string>
    <string name="tv_activity_remain_time_hours">%1$d시간 %2$d분 남음</string>
    <string name="tv_activity_remain_time_days">%1$d일 남음</string>
    <string name="tv_activity_remain_time_weeks">%1$d주 남음</string>
    <string name="tv_activity_remain_time_months">%1$d개월 %2$d주 남음</string>
    <string name="tv_activity_before_time_minutes">%1$d분 전</string>
    <string name="tv_activity_before_time_hours">%1$d시간 %2$d분 전</string>
    <string name="tv_activity_before_time_days">%1$d일 전</string>
    <string name="tv_activity_before_time_weeks">%1$d주 전</string>
    <string name="tv_activity_before_time_months">%1$d개월 %2$d주 전</string>
    <string name="tv_activity_brief_done">종료</string>
    <string name="tv_onboarding_comment_1">스터디를 생성하고 초대할 수 있어요</string>
    <string name="tv_onboarding_comment_2">칭찬을 주고 받으며 포도알을 채워나가요!</string>
    <string name="tv_onboarding_comment_3">스터밋으로 공부하고\n나의 포도나무를 성장시켜 보세요!</string>
    <string name="tv_home_recent_activity_comment">곧 일정이 시작돼요!</string>
    <string name="tv_activity_detail_done">작성 전</string>
    <string name="tv_calendar_year_month">%1$d년 %2$d월</string>
    <string name="tbt_home_todo">할 일</string>
    <string name="tbt_home_notice">공지사항</string>
    <string name="tv_user_withdraw">알 수 없음</string>
    <string name="tv_home_todo_empty">오늘은 일정이 없어요</string>
    <string name="tv_home_todo_empty_suggest">할 일을 생성해보세요.</string>

    <!--Auth-->
    <string name="tv_login_start">스터밋 시작하기</string>
    <string name="tv_signup_toolbar">프로필 설정</string>
    <string name="tv_profile_title">프로필 사진을 설정해주세요.</string>
    <string name="fab_profile_add">프로필 이미지 추가</string>
    <string name="tv_name_title">닉네임을 입력해주세요.</string>
    <string name="hint_name_input">영어 대/소문자, 한글 10글자 이내</string>
    <string name="tv_name_counter">%1$d/%2$d</string>
    <string name="tv_region_title">지역을 선택해주세요.</string>
    <string name="tv_field_title">분야를 선택해주세요.</string>
    <string name="hint_field_search">Search</string>
    <string name="description_field_search">분야 검색</string>
    <string name="tv_signup_success">스터밋에 오신걸 환영해요!</string>

    <!--Button-->
    <string name="btn_next">다음</string>
</resources>