<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_gray_50_radius_24"
        android:padding="0dp">

        <TextView
            android:id="@+id/tv_popup_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Stumeet.Title3"
            app:layout_constraintBottom_toTopOf="@id/tv_popup_caution"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/test_popup_question" />

        <TextView
            android:id="@+id/tv_popup_caution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Stumeet.Caption2"
            android:textColor="@color/gray_400"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/tv_popup_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_popup_question"
            tools:text="test caution" />

        <TextView
            android:id="@+id/tv_popup_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="24dp"
            android:text="@string/component_popup_no"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Stumeet.Title2"
            android:textColor="@color/gray_300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_popup_yes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_popup_caution" />

        <TextView
            android:id="@+id/tv_popup_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="24dp"
            android:text="@string/component_popup_yes"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Stumeet.Title2"
            android:textColor="@color/primary_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_popup_no"
            app:layout_constraintTop_toTopOf="@id/tv_popup_no" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>