<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_50">

        <include
            android:id="@+id/layout_app_bar"
            layout="@layout/view_signup_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:progress="@{2}"
            app:visible="@{true}" />

        <TextView
            android:id="@+id/tv_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:text="@string/tv_name_title"
            android:textAppearance="@style/TextAppearance.Stumeet.Title3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_app_bar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            app:boxBackgroundMode="none"
            app:boxStrokeErrorColor="@color/warning_50"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextAppearance.Stumeet.Body2"
            app:errorTextColor="@color/warning_500"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_name_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_gray_800_radius_16"
                    android:backgroundTint="@color/gray_75"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_name_input"
                    android:maxLength="10"
                    android:paddingVertical="16dp"
                    android:paddingStart="24dp"
                    android:textAppearance="@style/TextAppearance.Stumeet.Body2"
                    android:textColorHint="@color/gray_400"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_name_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/tv_name_counter"
                    android:textAppearance="@style/TextAppearance.Stumeet.Body2"
                    android:textColor="@color/tv_counter"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@id/tv_name_input"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_name_input" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/layout_name_btn"
            layout="@layout/component_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>